# domi

./: .gitignore  TODO.org  build.py  pyproject.toml  schema.sql
domi/: app.py  auth.py  gpg.py  log.py  peers.py
pbuf/: domi.proto
